# rsomics-plink-tdt

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
tests/: compat.rs  skip_and_sex.rs
tests/golden/: many.bed  many.bim  many.fam  many.tdt.golden  trio.bed  trio.bim  trio.fam  trio.tdt.golden  withx.bed  withx.bim  withx.fam  withx.tdt.golden
