[package]
name = "rsomics-plink-tdt"
version = "0.1.1"
description = "PLINK1 transmission disequilibrium test for trios (plink --tdt)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-plink-tdt"
authors = ["Zane Leong <efd@live.com>"]

## Origin
##
## Independent Rust implementation of PLINK1 --tdt based on:
## - Spielman, McGinnis & Ewens 1993 (TDT, doi:10.1086/229918)
## - Chang et al. 2015 (PLINK 1.9, doi:10.1186/s13742-015-0047-8)
## - Purcell et al. 2007 (PLINK 1, doi:10.1086/519795)
## - PLINK 1.9 family-based association spec (https://www.cog-genomics.org/plink/1.9/fam_assoc)
## - PLINK 1.9 binary fileset spec (https://www.cog-genomics.org/plink/1.9/formats)
## - Black-box behaviour testing against the plink 1.9 binary
##
## License: MIT OR Apache-2.0
## Upstream credit: PLINK 1.9 (Christopher Chang et al., GPLv3)

[[bin]]
name = "rsomics-plink-tdt"
path = "src/main.rs"

[lib]
name = "rsomics_plink_tdt"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[dependencies]
rsomics-pgen = { version = "0.2" }
rayon = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
